@@ -2,20 +2,23 @@ package cz.cvut.kbss.study.config;
 
 import cz.cvut.kbss.study.security.CsrfHeaderFilter;
 import cz.cvut.kbss.study.security.SecurityConstants;
+import cz.cvut.kbss.study.service.ConfigReader;
+import cz.cvut.kbss.study.util.ConfigParam;
 import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
-import org.springframework.security.web.AuthenticationEntryPoint;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.AuthenticationFailureHandler;
 import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
+import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.authentication.logout.LogoutSuccessHandler;
 import org.springframework.security.web.csrf.CsrfFilter;
 import org.springframework.web.cors.CorsConfiguration;
@@ -23,20 +26,18 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@ComponentScan(basePackages = "cz.cvut.kbss.study.security")
-@EnableGlobalMethodSecurity(prePostEnabled = true, securedEnabled = true)
-public class SecurityConfig extends WebSecurityConfigurerAdapter {
+@EnableMethodSecurity
+public class SecurityConfig {
 
     private static final String[] COOKIES_TO_DESTROY = {
             SecurityConstants.SESSION_COOKIE_NAME,
             SecurityConstants.REMEMBER_ME_COOKIE_NAME,
             SecurityConstants.CSRF_COOKIE_NAME
     };
-
-    private final AuthenticationEntryPoint authenticationEntryPoint;
 
     private final AuthenticationFailureHandler authenticationFailureHandler;
 
@@ -46,56 +47,52 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 
     private final AuthenticationProvider ontologyAuthenticationProvider;
 
-    public SecurityConfig(AuthenticationEntryPoint authenticationEntryPoint,
-                          AuthenticationFailureHandler authenticationFailureHandler,
+    public SecurityConfig(AuthenticationFailureHandler authenticationFailureHandler,
                           AuthenticationSuccessHandler authenticationSuccessHandler,
                           LogoutSuccessHandler logoutSuccessHandler,
                           AuthenticationProvider ontologyAuthenticationProvider) {
-        this.authenticationEntryPoint = authenticationEntryPoint;
         this.authenticationFailureHandler = authenticationFailureHandler;
         this.authenticationSuccessHandler = authenticationSuccessHandler;
         this.logoutSuccessHandler = logoutSuccessHandler;
         this.ontologyAuthenticationProvider = ontologyAuthenticationProvider;
     }
 
-    @Override
-    protected void configure(AuthenticationManagerBuilder auth) throws Exception {
-        auth.authenticationProvider(ontologyAuthenticationProvider);
-    }
-
     @Bean
-    @Override
-    public AuthenticationManager authenticationManagerBean() throws Exception {
-        return super.authenticationManagerBean();
-    }
-
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
-        http.authorizeRequests().anyRequest().permitAll().and()
-            .exceptionHandling().authenticationEntryPoint(authenticationEntryPoint)
-            .and().cors().configurationSource(corsConfigurationSource())
-            .and()
-            .authenticationProvider(ontologyAuthenticationProvider)
+    public SecurityFilterChain filterChain(HttpSecurity http, ConfigReader config) throws Exception {
+        final AuthenticationManager authManager = buildAuthenticationManager(http);
+        http.authorizeHttpRequests((auth) -> auth.anyRequest().permitAll())
+            .cors((auth) -> auth.configurationSource(corsConfigurationSource(config)))
+            .csrf(AbstractHttpConfigurer::disable)
             .addFilterAfter(new CsrfHeaderFilter(), CsrfFilter.class)
-            .csrf().disable()
-            .formLogin().successHandler(authenticationSuccessHandler)
-            .failureHandler(authenticationFailureHandler)
-            .loginProcessingUrl(SecurityConstants.SECURITY_CHECK_URI)
-            .usernameParameter(SecurityConstants.USERNAME_PARAM).passwordParameter(SecurityConstants.PASSWORD_PARAM)
-            .and()
-            .logout().invalidateHttpSession(true).deleteCookies(COOKIES_TO_DESTROY)
-            .logoutUrl(SecurityConstants.LOGOUT_URI).logoutSuccessHandler(logoutSuccessHandler)
-            .and().sessionManagement().maximumSessions(1);
+            .exceptionHandling(ehc -> ehc.authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)))
+            .formLogin((form) -> form.loginProcessingUrl(SecurityConstants.SECURITY_CHECK_URI)
+                                     .successHandler(authenticationSuccessHandler)
+                                     .failureHandler(authenticationFailureHandler))
+            .logout((auth) -> auth.logoutUrl(SecurityConstants.LOGOUT_URI)
+                                  .logoutSuccessHandler(logoutSuccessHandler)
+                                  .invalidateHttpSession(true).deleteCookies(COOKIES_TO_DESTROY))
+            .authenticationManager(authManager);
+        return http.build();
+    }
+
+    private AuthenticationManager buildAuthenticationManager(HttpSecurity http) throws Exception {
+        final AuthenticationManagerBuilder ab = http.getSharedObject(AuthenticationManagerBuilder.class);
+        ab.authenticationProvider(ontologyAuthenticationProvider);
+        return ab.build();
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource() {
-        // We're allowing all methods from all origins so that the application API is usable also by other clients
-        // than just the UI.
-        // This behavior can be restricted later.
+    CorsConfigurationSource corsConfigurationSource(ConfigReader config) {
+        // allowCredentials requires allowed origins to be configured (* is not supported)
         final CorsConfiguration corsConfiguration = new CorsConfiguration().applyPermitDefaultValues();
         corsConfiguration.setAllowedMethods(Collections.singletonList("*"));
-        corsConfiguration.setAllowedOrigins(Collections.singletonList("*"));
+        if (!config.getConfig(ConfigParam.APP_CONTEXT, "").isBlank()) {
+            String appUrl = config.getConfig(ConfigParam.APP_CONTEXT);
+            appUrl = appUrl.substring(0, appUrl.lastIndexOf('/'));
+            corsConfiguration.setAllowedOrigins(List.of(appUrl));
+        } else {
+            corsConfiguration.setAllowedOrigins(Collections.singletonList("*"));
+        }
         corsConfiguration.addExposedHeader(HttpHeaders.AUTHORIZATION);
         corsConfiguration.addExposedHeader(HttpHeaders.LOCATION);
         corsConfiguration.addExposedHeader(HttpHeaders.CONTENT_DISPOSITION);
